--- a/manifest.json
+++ b/manifest.json
@@ -4,9 +4,9 @@
   "version": "1.0",
   "permissions": ["activeTab", "scripting"],
   "icons": {
-    "16": "images/icon16.png",
-    "48": "images/icon48.png",
-    "128": "images/icon128.png"
+    "16": "images/icon16.jpg",
+    "48": "images/icon48.jpg",
+    "128": "images/icon128.jpg"
   },
   "content_scripts": [
     {
